--- a/res/values/app_profile_arrays.xml
+++ b/res/values/app_profile_arrays.xml
@@ -3,6 +3,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     
     <string-array name="background_restrictions_entries">
+    	<item>@string/background_restrictions_super</item>
     	<item>@string/background_restrictions_unlimited</item>
     	<item>@string/background_restrictions_default</item>
     	<item>@string/background_restrictions_limited</item>
@@ -11,6 +12,7 @@
     </string-array>
 
     <string-array name="background_restrictions_values">
+    	<item>-2</item>
     	<item>-1</item>
     	<item>0</item>
     	<item>1</item>
@@ -113,7 +115,24 @@
     	<item>3</item>
     	<item>4</item>
     	<item>5</item>
-    	<item>6</item>
+    	<item>10</item>
+    </string-array>
+
+    <string-array name="min_fps_listentries">
+    	<item>Default</item>
+    	<item>30</item>
+    	<item>60</item>
+    	<item>90</item>
+    	<item>120</item>
+    	<item>Dynamic</item>
+     </string-array>
+     <string-array name="min_fps_listvalues">
+    	<item>0</item>
+    	<item>1</item>
+    	<item>3</item>
+    	<item>4</item>
+    	<item>5</item>
+    	<item>10</item>
     </string-array>
 
     <string-array name="cpu_silver_freqs">
@@ -147,37 +166,44 @@
     </string-array>
 
     <string-array name="spoof_listentries">
-    	<item>Default</item>
-    	<item>Poco X3 India</item>
-    	<item>Poco X3 NFC Global</item>
-    	<item>Pixel 3</item>
-    	<item>Pixel 3 XL</item>
-    	<item>Pixel 4</item>
-    	<item>Pixel 4 XL</item>
-    	<item>Pixel 4a</item>
-    	<item>Pixel 5</item>
-    	<item>Nvidia Shield TV 2019 Pro</item>
-    	<item>OnePlus 8T</item>
-    	<item>OnePlus 8 Pro</item>
-    	<item>ASUS ROG Phone 5</item>
-    	<item>Sony Xperia 10 II Dual"</item>
-    	<item>Sony Xperia 2 5G"</item>
-    	<item>Samsung S21"</item>
-    	<item>Xiaomi MI 10 Pro"</item>
-    	<item>Pixel 6 Pro"</item>
-    	<item>Xiaomi MI 8"</item>
+    	<item>Default</item>                <!-- 0 -->
+    	<item>Poco X3 India</item>          <!-- 1 -->
+    	<item>Poco X3 NFC Global</item>     <!-- 2 -->
+        <item>Pixel XL</item>               <!-- 22 -->
+    	<item>Pixel 3</item>                <!-- 3 -->
+    	<item>Pixel 3 XL</item>             <!-- 4 -->
+    	<item>Pixel 4</item>                <!-- 5 -->
+    	<item>Pixel 4 XL</item>             <!-- 6 -->
+    	<item>Pixel 4a</item>               <!-- 7 -->
+    	<item>Pixel 5</item>                <!-- 8 -->
+    	<item>Pixel 6 Pro</item>            <!-- 17 -->
+    	<item>Nvidia Shield TV 2019 Pro</item>  <!-- 9 -->
+    	<item>OnePlus 8T</item>             <!-- 10 -->
+    	<item>OnePlus 8 Pro</item>          <!-- 11 -->
+    	<item>ASUS ROG Phone 5</item>       <!-- 12 -->
+    	<item>Sony Xperia 10 II Dual</item> <!-- 13 -->
+    	<item>Sony Xperia 2 5G</item>       <!-- 14 -->
+    	<item>Samsung S21</item>            <!-- 15 -->
+    	<item>Xiaomi MI 10 Pro</item>       <!-- 16 -->
+    	<item>Xiaomi MI 8</item>            <!-- 18 -->
+    	<item>Poco X3 Pro</item>            <!-- 19 -->
+    	<item>Xiaomi Mi 11T</item>          <!-- 20 -->
+    	<item>Oppo R11 Plus</item>          <!-- 21 -->
+    	<item>Xiaomi Mi 11</item>           <!-- 23 -->
      </string-array>
 
      <string-array name="spoof_listvalues">
     	<item>0</item>
     	<item>1</item>
     	<item>2</item>
+        <item>22</item>
     	<item>3</item>
     	<item>4</item>
     	<item>5</item>
     	<item>6</item>
     	<item>7</item>
     	<item>8</item>
+    	<item>17</item>
     	<item>9</item>
     	<item>10</item>
     	<item>11</item>
@@ -186,8 +212,11 @@
     	<item>14</item>
     	<item>15</item>
     	<item>16</item>
-    	<item>17</item>
     	<item>18</item>
+    	<item>19</item>
+    	<item>20</item>
+    	<item>21</item>
+    	<item>23</item>
     </string-array>
 
     <string-array name="location_listentries">
@@ -254,5 +283,34 @@
     	<item>4</item>
     </string-array>
 
+    <string-array name="file_access_listentries">
+    	<item>@string/file_access_default</item>
+    	<item>@string/file_access_none</item>
+    	<item>@string/file_access_read</item>
+    	<item>@string/file_access_write</item>
+    	<item>@string/file_access_full</item>
+    	<item>@string/file_access_legacy</item>
+    </string-array>
+
+    <string-array name="file_access_listvalues">
+    	<item>0</item>
+    	<item>1</item>
+    	<item>2</item>
+    	<item>3</item>
+    	<item>4</item>
+    	<item>5</item>
+    </string-array>
+
+    <string-array name="language_listentries">
+    	<item>Default</item>
+    	<item>English</item>
+    	<item>Russian</item>
+    </string-array>
+
+    <string-array name="language_listvalues">
+    	<item>""</item>
+    	<item>"en"</item>
+    	<item>"ru"</item>
+    </string-array>
 
 </resources>
